--- a/var/www/static/body.html
+++ b/var/www/static/body.html
@@ -1,9 +1,9 @@
 <body class="metro">
 	<nav class="navigation-bar dark">
 	<nav class="navigation-bar-content">
-	<item class="element"><strong>Задачи Олега</strong></item>
+	<item class="element"><strong>Tasks</strong></item>
 	<item class="element-divider"></item>
-	<item class="element">Вся инфа здесь, нехуй доёбывать</item>
+	<item class="element">All of information here - dont interrupt</item>
 	</nav>
 	</nav>
 	<br>
